--- a/ticket-system-start/pom.xml
+++ b/ticket-system-start/pom.xml
@@ -19,6 +19,11 @@
         </dependency>
         <dependency>
             <groupId>com.ticketsystem</groupId>
+            <artifactId>ticket-system-controller</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.ticketsystem</groupId>
             <artifactId>ticket-system-infrastructure</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
