Add Resilience4j configuration to application.yml

--- a/ticket-system-start/src/main/resources/application.yml
+++ b/ticket-system-start/src/main/resources/application.yml
@@ -12,3 +12,34 @@ server:
   tomcat:
     threads:
       max: 10
+
+resilience4j:
+  circuitbreaker:
+    instances:
+      ticketService:
+        registerHealthIndicator: true
+        slidingWindowSize: 10
+        permittedNumberOfCallsInHalfOpenState: 3
+        slidingWindowType: COUNT_BASED
+        minimumNumberOfCalls: 5
+        waitDurationInOpenState: 5s
+        failureRateThreshold: 50
+        eventConsumerBufferSize: 10
+  retry:
+    instances:
+      ticketService:
+        maxAttempts: 3
+        waitDuration: 2s
+        enableExponentialBackoff: true
+        exponentialBackoffMultiplier: 2
+  ratelimiter:
+    instances:
+      ticketService:
+        limitForPeriod: 10
+        limitRefreshPeriod: 1s
+        timeoutDuration: 0
+  bulkhead:
+    instances:
+      ticketService:
+        maxConcurrentCalls: 5
+        maxWaitDuration: 0
